# stm32-util-basic-stdio

./: CMakeLists.txt  LICENSE.html  LICENSE.md  README.html  README.md  Release_Notes.html  Release_Notes.md  STMicroelectronics.basic_stdio.pdsc  STMicroelectronics.basic_stdio.sha1  SW_Security_Level.md  basic_stdio_core.c  basic_stdio_core.h  sbom_cdx.json
.config/: STMicroelectronics.basic_stdio.gpdsc.hbs  basic_stdio_config_parameters.json
.config/template/: mx_basic_stdio_app_template.c.hbs  mx_basic_stdio_app_template.h.hbs
.config/template/license/: mx_basic_stdio_license_template.md.hbs
.config/template/partials/: LICENSE_partial.hbs
interface_io/: basic_stdio_itf_io.h  basic_stdio_itfio_itm.c  basic_stdio_itfio_template.c  basic_stdio_itfio_uart.c
